cluster/projects/kigana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kigana-web
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: kigana-web
