cluster/projects/kigana/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kigana-web
spec:
  entryPoints:
    - websecure
  middlewares:
    - https-redirectscheme
  routes:
    - match: Host(`kigana.com`)
      kind: Rule
      services:
        - name: kigana-web
          port: 80
  tls:
    certResolver: letsencrypt2
